src/css/includes/_table.scss
.table-card {
  .text-h6 {
    font-size: 0.9375rem;
  }

  .q-table tbody td {
    font-size: 0.75rem;
    font-family: 'Roboto Mono', serif !important;
  }

  tbody.q-virtual-scroll__content td {
    border-top: 0 !important;
    border-bottom-width: 1px;
    border-bottom-style: solid;
  }
}

.search-filters {
  .q-btn {
    font-size: 0.75rem;
    text-transform: none;
    padding: 0 0.5rem;
    margin: 0 0.5rem;

    .q-icon {
      font-size: 1.125em;

      &.on-left {
        margin-right: 0.5rem;
      }
    }
  }
}
//}

.q-card.search-table-card {
  box-shadow: none !important;

  .card-header {
    padding: 1.5rem;
    border-bottom-width: 1px;
    border-bottom-style: solid;
  }

  .search-filters {
    padding: 1.5rem;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    margin-bottom: 0;

    .q-field .q-field__control {
      max-width: 100%;
      margin-left: unset;
    }
  }

  .q-table__middle {
    padding: 0 1.5rem 1.5rem;
  }

  .q-table__bottom {
    padding: 1.5rem;
    font-size: 0.875rem;
    font-weight: 500;
  }
}
.search-view-table {
  &.condensed-rows {
    .q-table thead tr,
    .q-table tbody.q-virtual-scroll__content td {
      height: 40px;
    }
  }

  &.regular-rows {
    .q-table thead tr,
    .q-table tbody.q-virtual-scroll__content td {
      height: 2.5rem !important;
    }
  }

  &.relaxed-rows {
    .q-table thead tr,
    .q-table tbody.q-virtual-scroll__content td {
      height: 56px;
    }
  }

  .attribute-root {
    display: inline-block;
  }
}
.search-view-table {
  /* height or max-height is important for virtual scroll */

  &:before {
    display: block;
    content: '';
    position: absolute;
    top: 0;
    left: 1.5rem;
    right: 1.5rem;
    width: calc(100% - 3rem - 6px);
    height: 2.5rem;
    box-shadow: 0 0 6px 1px rgb(0 0 0 / 8%);
  }

  .q-table {
    border-collapse: separate;
    border-spacing: 0;
  }

  .q-table thead tr,
  .q-table tbody.q-virtual-scroll__content td {
    padding: 0 16px;
    height: 40px !important;
  }

  .q-table th {
    padding: 0 16px;
  }

  .q-table__top {
    height: 1px;
    padding: 0;
  }

  .q-table__top {
    position: relative;
  }

  thead {
    tr {
      &.q-table__progress {
        height: 2px !important;
        top: 40px !important;
        position: absolute;
        left: 1.5rem;
        right: 1.875rem;
        z-index: 100000 !important;

        th {
          width: 100%;
          display: block;
          height: 2px;
          left: 0;
          right: 6px;
          position: absolute;
          top: 0 !important;

          .q-linear-progress {
          }
        }
      }

      th {
        position: sticky;
        z-index: 1;
      }
    }
  }

  // Sticky header
  thead tr:first-child th {
    top: 0;
  }

  tbody.q-virtual-scroll__content {
    td {
      border-top-width: 1px;
      border-top-style: solid;
      border-bottom-width: 1px;
      border-bottom-style: solid;
    }

    td:first-child {
      border-left: 0;
    }

    td:last-child {
      border-right: 0;
    }
  }

  .q-chip {
    font-weight: 600;
    font-size: 0.75rem;

    .q-chip__content {
      text-align: center;
      display: inline;
    }
  }

  tbody {
    td {
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
    }
  }
}

// Responsiveness
.table-card {
  .text-h6 {
    display: none;
  }
}

.q-table__bottom {
  display: none;
}

.table-card {
  @media (min-width: 1024px) {
    .text-h6 {
      display: block;
    }

    //.q-table__bottom {
    //  display: block;
    //}
  }
}

//.attribute-group {
//  .attribute-root {
//    display: block;
//    width: 100%;
//  }
//
//  .attribute-group {
//    .attribute-root {
//      display: inline-block;
//      width: auto;
//    }
//  }
//}

.search-view-table {
  //margin-top: 0;
}

@media (min-width: 1024px) {
  .attribute-group {
    .attribute-root {
      display: inline-block;
    }
  }

  .search-view-table {
    margin-top: 1.5rem;
  }
}

